<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RageBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".PageCategory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:background="@color/left_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/logotip" />

        <TextView
            android:id="@+id/textRas"
            android:layout_width="120dp"
            android:layout_height="156dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/raspis"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textStol"
            android:layout_width="120dp"
            android:layout_height="156dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/stolov"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />

        <TextView
            android:id="@+id/textBibli"
            android:layout_width="120dp"
            android:layout_height="156dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/biblio"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/pageImage"
        android:layout_width="320dp"
        android:layout_height="362dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="343dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_032075_887063" />

    <TextView
        android:id="@+id/PageTitle"
        android:layout_width="229dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/pageImage"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:background="@color/back"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634">


        <LinearLayout
            android:id="@+id/books"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PageNal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/nal"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="55dp"
                android:gravity="center"
                android:text="@string/namber"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Pagecolvo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/Pagenamber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="30dp"
                android:gravity="left"
                android:paddingStart="86dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/PageText"
        android:layout_width="267dp"
        android:layout_height="112dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="34dp"
        android:text="@string/discription"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/addtoCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5A1414"
        android:onClick="addToCart"
        android:text="Добавить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PageText"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
